<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snow Day Alarm</string>
    <string name="title_section1">Today\'s Alarms</string>
    <string name="title_section2">All Alarms</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ringing">Snow Day Alarm</string>
    <string name="done">Done</string>
    <string name="done_caps">DONE</string>
    <string name="warning_message">Snow day determination could be inaccurate since the device is not connected to the internet\nLast update:\s\s\s</string>
    <string name="no_state_text">Unknown state</string>
    <string name="message_delay">Sorry, no cancellation, but you did get a delay</string>
    <string name="message_normal">Sorry, looks like school\'s on time today</string>
    <string name="active_on">Active on:</string>
    <string name="action_add_alarm">Add new alarm</string>
    <string name="no_name">Unknown Alarm</string>
    <string name="title_activity_edit_alarm">Add/Edit Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="name_label">Name:</string>
    <string name="trigger_time_label">Trigger Time:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="days_to_ring_label">Days to Ring:</string>
    <string name="change_button">Change</string>
    <string name="missing_value_title">Missing Values</string>
    <string name="missing_name_message">A name must be specified</string>
    <string name="ok">OK</string>
    <string name="proceed_anyway">Proceed Anyway</string>
    <string name="missing_date_message">You have not set this alarm to be active on any day of the week; continue anyway?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_action">Cancel Action:</string>
    <string name="delay_action">Delay Action:</string>
    <string name="delete">Delete</string>
    <string name="title_are_you_sure">Are you sure?</string>
    <string name="message_are_you_sure">Are you sure you want to delete this alarm?</string>
    <string name="enabled_label">Enabled:</string>
    <string name="no">No</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="saving">Saving…</string>
    <string name="deleting">Deleting…</string>
    <string name="message_no_templates">You have no alarm templates\nClick the add button above to create one</string>
    <string name="message_no_alarms">Easy going today, no alarms</string>

</resources>
